--- a/src/components/VAComments/Comments.module.scss
+++ b/src/components/VAComments/Comments.module.scss
@@ -2,11 +2,11 @@
 
 .commentWrapper {
   // border: 1px solid rebeccapurple;
-  height: calc(85vh - 200px);
+  height: calc(86vh - 200px);
   max-height: calc(85vh - 200px);
   overflow-y: auto;
   overflow-x: hidden;
-  position: relative;
+  
 }
 
 .commentWrapper::-webkit-scrollbar {
@@ -34,10 +34,11 @@
 .comments {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 25px;
   margin: 9px 20px;
-  padding: 0 30px;
+  padding: 0px;
 }
+
 @media screen and (min-width: 900px) {
   .comments {
     padding: 0 30px;
@@ -59,8 +60,7 @@
   padding: 10px 30px;
   gap: 36px;
   margin-top: 6px;
-  position: absolute;
-  bottom: 0;
+ 
 }
 
 .inputField input {
@@ -93,7 +93,7 @@
 }
 
 .emojiFace:hover {
-  color: darkorange;
+  color: rgb(247, 0, 255);
 }
 
 .message,
@@ -101,6 +101,10 @@
 .loading,
 .time {
   animation: message 1s ease-in-out 1;
+}
+
+.spinner{
+  animation : spinner 3.4s linear infinite !important;
 }
 
 @media screen and (max-width: 750px) {
@@ -114,12 +118,41 @@
 
 
 
+@media screen and (max-height: 740px) and (min-height: 700px) {
+  .commentWrapper {
+    // border: 1px solid rebeccapurple;
+
+    max-height: calc(89vh - 140px) !important;
+    height: calc(70vh - 140px) !important;
+
+  }
+}
+
+@media screen and (min-height: 600px) {
+    .commentWrapper {
+        // border: 1px solid rebeccapurple;
+        
+        max-height: calc(89vh - 140px) !important;
+        height: calc(78vh - 140px) !important;
+        
+    }
+}
+@media screen and (min-height: 600px) and ( max-height: 640px) and (min-width:1000px) {
+  .commentWrapper {
+    // border: 1px solid rebeccapurple;
+
+    max-height: calc(89vh - 140px) !important;
+    height: calc(69vh - 140px) !important;
+
+  }
+}
+
 @media screen and (min-height: 840px) {
   .commentWrapper {
     // border: 1px solid rebeccapurple;
 
     max-height: calc(89vh - 140px) !important;
-    height: calc(89vh - 140px) !important;
+    height: calc(83vh - 140px) !important;
 
   }
 }
@@ -129,12 +162,41 @@
     // border: 1px solid rebeccapurple;
 
     max-height: calc(88vh - 140px) !important;
-    height: calc(88vh - 140px) !important;
+    height: calc(83vh - 140px) !important;
 
   }
 }
 
-@media screen and (min-height: 1020px) and (max-height:  1200px) {
+@media screen and (min-height: 700px) and (max-height:  780px) and (min-width:900px){
+  .commentWrapper {
+    // border: 1px solid rebeccapurple;
+
+    max-height: calc(88vh - 140px) !important;
+    height: calc(75vh - 140px) !important;
+
+  }
+}
+
+
+@media screen and (min-height: 1000px) {
+  .commentWrapper {
+    // border: 1px solid rebeccapurple;
+
+    max-height: calc(88vh - 140px) !important;
+    height: calc(86vh - 140px) !important;
+
+  }
+}
+
+@media screen and (min-height: 1100px) and (max-height:  1200px) {
+  .commentWrapper {
+    // border: 1px solid rebeccapurple;
+
+    max-height: calc(89vh - 140px) !important;
+    height: calc(88vh - 140px) !important;
+  }
+}
+@media screen and (min-height: 1200px)  {
   .commentWrapper {
     // border: 1px solid rebeccapurple;
 
@@ -146,7 +208,7 @@
 @media screen and (max-width: 600px) {
   .commentWrapper {
     // border: 1px solid rebeccapurple;
-    height: calc(85vh - 140px);
+    height: calc(82vh - 140px);
     max-height: calc(85vh - 140px);
     overflow-y: auto;
   }
@@ -180,5 +242,28 @@
   }
   100% {
     transform: scale(1);
+  }
+}
+
+@keyframes spinner {
+  0% {
+    color: rebeccapurple;
+    transform: rotate(0);
+  }
+  25% {
+    color: red;
+    transform: rotate(90deg);
+  }
+  50% {
+    color: rgb(247, 0, 255);
+    transform: rotate(180deg);
+  }
+  75% {
+    color: red;
+    transform: rotate(360deg);
+  }
+  100% {
+    color: rebeccapurple;
+    transform: rotate(0deg);
   }
 }
